Parallelize subsequence match merging.